--- a/style.css
+++ b/style.css
@@ -25,21 +25,17 @@ div.filter {
 }
 
 #listTable {
-  left: 50%;
-  top: 50%;
-  margin-left: -24%;
+  margin-left: 400px;
   position: fixed;
-  margin-top: -10%;
+  margin-top: 230px;
   width: 600px;
   padding: 30px 0px 15px 0px;
 }
 
 #listTable2 {
-  left: 50%;
-  top: 50%;
-  margin-left: -25%;
+  margin-left: 400px;
   position: fixed;
-  margin-top: -9%;
+  margin-top: 250px;
   width: 800px;
   padding: 30px 103px 15px 20px;
 }
